// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Read save file box-median-blur.chn 1`] = `
Object {
  "edges": Array [
    Object {
      "animated": false,
      "data": Object {},
      "id": "e8a88e5a-6d1f-44a6-9e42-e5f1b633d564",
      "source": "13626da8-98e4-4fc6-91ef-6b0e8e875619",
      "sourceHandle": "13626da8-98e4-4fc6-91ef-6b0e8e875619-0",
      "target": "e7c3d964-716d-43d7-83b9-83825c35a7e2",
      "targetHandle": "e7c3d964-716d-43d7-83b9-83825c35a7e2-0",
      "type": "main",
      "zIndex": 49,
    },
  ],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "13626da8-98e4-4fc6-91ef-6b0e8e875619",
        "inputData": Object {
          "1": 3,
          "2": 7,
        },
        "schemaId": "chainner:image:blur",
      },
      "height": 339,
      "id": "13626da8-98e4-4fc6-91ef-6b0e8e875619",
      "position": Object {
        "x": 480,
        "y": 400,
      },
      "selected": false,
      "type": "regularNode",
      "width": 257,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "e7c3d964-716d-43d7-83b9-83825c35a7e2",
        "inputData": Object {
          "1": 4,
        },
        "schemaId": "chainner:image:median_blur",
      },
      "height": 257,
      "id": "e7c3d964-716d-43d7-83b9-83825c35a7e2",
      "position": Object {
        "x": 768,
        "y": 400,
      },
      "selected": false,
      "type": "regularNode",
      "width": 257,
      "zIndex": 50,
    },
  ],
  "tamperedWith": false,
  "viewport": Object {
    "x": 0,
    "y": 0,
    "zoom": 1,
  },
}
`;

exports[`Read save file image-adjustments.chn 1`] = `
Object {
  "edges": Array [],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "23a197cf-248a-4c35-8aa4-5c9a32863d44",
        "inputData": Object {
          "1": 69,
          "2": 76,
          "3": "2",
        },
        "schemaId": "chainner:image:threshold",
      },
      "height": 392,
      "id": "23a197cf-248a-4c35-8aa4-5c9a32863d44",
      "position": Object {
        "x": 625.8070606398546,
        "y": 592.9030240407762,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "59b0e388-685e-4b7b-8ffe-c64bc98a350f",
        "inputData": Object {
          "1": 24,
          "2": 43,
        },
        "schemaId": "chainner:image:brightness_and_contrast",
      },
      "height": 310,
      "id": "59b0e388-685e-4b7b-8ffe-c64bc98a350f",
      "position": Object {
        "x": 571.3328481394495,
        "y": 163.52957902171042,
      },
      "selected": false,
      "type": "regularNode",
      "width": 278,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "5acd95ce-3be7-42d0-9388-2e681fe39d1c",
        "inputData": Object {
          "1": -61,
          "2": 68,
        },
        "schemaId": "chainner:image:hue_and_saturation",
      },
      "height": 310,
      "id": "5acd95ce-3be7-42d0-9388-2e681fe39d1c",
      "position": Object {
        "x": 1034.6005807596155,
        "y": 179.7658590325766,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "75cbaa5e-7d31-4990-b46d-8087e550a729",
        "inputData": Object {
          "1": 90,
          "2": 0,
          "3": 0,
          "4": 9,
          "5": 2,
        },
        "schemaId": "chainner:image:threshold_adaptive",
      },
      "height": 572,
      "id": "75cbaa5e-7d31-4990-b46d-8087e550a729",
      "position": Object {
        "x": 1007.135509649303,
        "y": 537.8809142551769,
      },
      "selected": false,
      "type": "regularNode",
      "width": 262,
      "zIndex": 50,
    },
  ],
  "tamperedWith": false,
  "viewport": Object {
    "x": 0,
    "y": 0,
    "zoom": 1,
  },
}
`;

exports[`Read save file image-channels.chn 1`] = `
Object {
  "edges": Array [
    Object {
      "animated": false,
      "data": Object {},
      "id": "1cbdd398-aeda-4abb-a655-a02d745ea32b",
      "source": "9a3340d5-b39b-44e2-bbae-129df1a0ebdd",
      "sourceHandle": "9a3340d5-b39b-44e2-bbae-129df1a0ebdd-1",
      "target": "0f5b12e2-78db-4d23-be0e-f1247b0d9a5a",
      "targetHandle": "0f5b12e2-78db-4d23-be0e-f1247b0d9a5a-1",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "2f7e467d-5d40-4ab4-9e28-8f5fc730f50e",
      "source": "0f02da52-de20-484f-a4ee-fe4f5c16b09f",
      "sourceHandle": "0f02da52-de20-484f-a4ee-fe4f5c16b09f-0",
      "target": "0f5b12e2-78db-4d23-be0e-f1247b0d9a5a",
      "targetHandle": "0f5b12e2-78db-4d23-be0e-f1247b0d9a5a-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "325201b4-fe64-4820-9868-ae3c46741e5a",
      "source": "6ca1e847-b2be-461f-add5-7442eb466d27",
      "sourceHandle": "6ca1e847-b2be-461f-add5-7442eb466d27-0",
      "target": "0df5f783-71c1-42ef-8fcf-2c4ac91c6923",
      "targetHandle": "0df5f783-71c1-42ef-8fcf-2c4ac91c6923-0",
      "type": "main",
      "zIndex": 69,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "36926793-4fbd-4914-9fcb-7ff357209a33",
      "source": "6ca1e847-b2be-461f-add5-7442eb466d27",
      "sourceHandle": "6ca1e847-b2be-461f-add5-7442eb466d27-0",
      "target": "0f02da52-de20-484f-a4ee-fe4f5c16b09f",
      "targetHandle": "0f02da52-de20-484f-a4ee-fe4f5c16b09f-0",
      "type": "main",
      "zIndex": 69,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "3f0a792e-89b6-4672-9ba6-db4d32b4c65b",
      "source": "6ca1e847-b2be-461f-add5-7442eb466d27",
      "sourceHandle": "6ca1e847-b2be-461f-add5-7442eb466d27-0",
      "target": "9a3340d5-b39b-44e2-bbae-129df1a0ebdd",
      "targetHandle": "9a3340d5-b39b-44e2-bbae-129df1a0ebdd-0",
      "type": "main",
      "zIndex": 69,
    },
  ],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "0df5f783-71c1-42ef-8fcf-2c4ac91c6923",
        "inputData": Object {},
        "schemaId": "chainner:image:split_channels",
      },
      "height": 298,
      "id": "0df5f783-71c1-42ef-8fcf-2c4ac91c6923",
      "position": Object {
        "x": 479.85304269859705,
        "y": 250.19507910772893,
      },
      "selected": true,
      "type": "regularNode",
      "width": 242,
      "zIndex": 70,
    },
    Object {
      "data": Object {
        "id": "0f02da52-de20-484f-a4ee-fe4f5c16b09f",
        "inputData": Object {
          "1": 1,
        },
        "schemaId": "chainner:image:fill_alpha",
      },
      "height": 260,
      "id": "0f02da52-de20-484f-a4ee-fe4f5c16b09f",
      "position": Object {
        "x": 461.03125,
        "y": 626,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "0f5b12e2-78db-4d23-be0e-f1247b0d9a5a",
        "inputData": Object {},
        "schemaId": "chainner:image:merge_transparency",
      },
      "height": 218,
      "id": "0f5b12e2-78db-4d23-be0e-f1247b0d9a5a",
      "position": Object {
        "x": 823.03125,
        "y": 944,
      },
      "selected": false,
      "type": "regularNode",
      "width": 257,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "6ca1e847-b2be-461f-add5-7442eb466d27",
        "inputData": Object {},
        "schemaId": "chainner:image:merge_channels",
      },
      "height": 298,
      "id": "6ca1e847-b2be-461f-add5-7442eb466d27",
      "position": Object {
        "x": -89.06084168665939,
        "y": 220.21968356908422,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "9a3340d5-b39b-44e2-bbae-129df1a0ebdd",
        "inputData": Object {},
        "schemaId": "chainner:image:split_transparency",
      },
      "height": 218,
      "id": "9a3340d5-b39b-44e2-bbae-129df1a0ebdd",
      "position": Object {
        "x": 152.03125,
        "y": 721,
      },
      "selected": false,
      "type": "regularNode",
      "width": 244,
      "zIndex": 50,
    },
  ],
  "tamperedWith": false,
  "viewport": Object {
    "x": 0,
    "y": 0,
    "zoom": 1,
  },
}
`;

exports[`Read save file image-dim.chn 1`] = `
Object {
  "edges": Array [
    Object {
      "animated": false,
      "data": Object {},
      "id": "08cce8c6-1519-47b2-bc9e-2791b06f8342",
      "source": "4bf814f8-2ede-4465-9fb3-10a40e7543fa",
      "sourceHandle": "4bf814f8-2ede-4465-9fb3-10a40e7543fa-1",
      "target": "2c77b070-2d17-418e-9a68-c9c0f1651619",
      "targetHandle": "2c77b070-2d17-418e-9a68-c9c0f1651619-2",
      "type": "main",
      "zIndex": 69,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "51373eef-dfc6-437a-8bcd-f7c1e15db205",
      "source": "4bf814f8-2ede-4465-9fb3-10a40e7543fa",
      "sourceHandle": "4bf814f8-2ede-4465-9fb3-10a40e7543fa-0",
      "target": "2c77b070-2d17-418e-9a68-c9c0f1651619",
      "targetHandle": "2c77b070-2d17-418e-9a68-c9c0f1651619-1",
      "type": "main",
      "zIndex": 69,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "7fa6b8d7-47ca-4263-82b9-865525989689",
      "source": "e07a2c2b-700d-4422-ae9a-8b22da0aaa62",
      "sourceHandle": "e07a2c2b-700d-4422-ae9a-8b22da0aaa62-0",
      "target": "2c77b070-2d17-418e-9a68-c9c0f1651619",
      "targetHandle": "2c77b070-2d17-418e-9a68-c9c0f1651619-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "f07d87a9-d6e6-47fe-8f49-830ccc280def",
      "source": "2c77b070-2d17-418e-9a68-c9c0f1651619",
      "sourceHandle": "2c77b070-2d17-418e-9a68-c9c0f1651619-0",
      "target": "14203edf-1335-4d4f-8174-a86ce0f53bcb",
      "targetHandle": "14203edf-1335-4d4f-8174-a86ce0f53bcb-0",
      "type": "main",
      "zIndex": 49,
    },
  ],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "14203edf-1335-4d4f-8174-a86ce0f53bcb",
        "inputData": Object {
          "1": 120,
          "2": 340,
          "3": "4",
        },
        "schemaId": "chainner:image:resize_resolution",
      },
      "height": 424,
      "id": "14203edf-1335-4d4f-8174-a86ce0f53bcb",
      "position": Object {
        "x": 1043.046875,
        "y": 557,
      },
      "selected": true,
      "type": "regularNode",
      "width": 283,
      "zIndex": 70,
    },
    Object {
      "data": Object {
        "id": "2c77b070-2d17-418e-9a68-c9c0f1651619",
        "inputData": Object {
          "1": 1024,
          "2": 2048,
        },
        "schemaId": "chainner:image:tile_fill",
      },
      "height": 342,
      "id": "2c77b070-2d17-418e-9a68-c9c0f1651619",
      "position": Object {
        "x": 692.046875,
        "y": 424,
      },
      "selected": false,
      "type": "regularNode",
      "width": 283,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "4bf814f8-2ede-4465-9fb3-10a40e7543fa",
        "inputData": Object {},
        "schemaId": "chainner:image:get_dims",
      },
      "height": 258,
      "id": "4bf814f8-2ede-4465-9fb3-10a40e7543fa",
      "position": Object {
        "x": 135.046875,
        "y": 626,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "e07a2c2b-700d-4422-ae9a-8b22da0aaa62",
        "inputData": Object {
          "1": 350,
          "2": "3",
        },
        "schemaId": "chainner:image:resize_factor",
      },
      "height": 342,
      "id": "e07a2c2b-700d-4422-ae9a-8b22da0aaa62",
      "position": Object {
        "x": 309.046875,
        "y": 223,
      },
      "selected": false,
      "type": "regularNode",
      "width": 279,
      "zIndex": 50,
    },
  ],
  "tamperedWith": false,
  "viewport": Object {
    "x": 0,
    "y": 0,
    "zoom": 1,
  },
}
`;

exports[`Read save file image-filters.chn 1`] = `
Object {
  "edges": Array [
    Object {
      "animated": false,
      "data": Object {},
      "id": "28b8e5bf-09c1-4518-9127-df1a959a4f00",
      "source": "e4e3c71b-e309-459e-a16e-373ad3762cd8",
      "sourceHandle": "e4e3c71b-e309-459e-a16e-373ad3762cd8-0",
      "target": "36ecdf30-ef07-478f-882c-5bb7019d447a",
      "targetHandle": "36ecdf30-ef07-478f-882c-5bb7019d447a-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "35a2263f-272c-4b53-8c36-148890f16c5a",
      "source": "36ecdf30-ef07-478f-882c-5bb7019d447a",
      "sourceHandle": "36ecdf30-ef07-478f-882c-5bb7019d447a-0",
      "target": "bbdbd06c-77d4-4484-8e40-bacf8be550f3",
      "targetHandle": "bbdbd06c-77d4-4484-8e40-bacf8be550f3-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "5002803f-f885-430f-958d-88000fb138d0",
      "source": "36ecdf30-ef07-478f-882c-5bb7019d447a",
      "sourceHandle": "36ecdf30-ef07-478f-882c-5bb7019d447a-0",
      "target": "ce5d04ca-a08a-4ecf-a07a-dcce789af967",
      "targetHandle": "ce5d04ca-a08a-4ecf-a07a-dcce789af967-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "94c6dc2c-f8bb-4605-b627-c51804328e58",
      "source": "a206f898-1e62-4297-acfa-2f32ab0d63f4",
      "sourceHandle": "a206f898-1e62-4297-acfa-2f32ab0d63f4-0",
      "target": "36ecdf30-ef07-478f-882c-5bb7019d447a",
      "targetHandle": "36ecdf30-ef07-478f-882c-5bb7019d447a-1",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "ab37d9e5-747a-414d-ac58-afa339d234b9",
      "source": "bbdbd06c-77d4-4484-8e40-bacf8be550f3",
      "sourceHandle": "bbdbd06c-77d4-4484-8e40-bacf8be550f3-0",
      "target": "cd11a3f3-e196-4c37-81cc-b7d07d4f704e",
      "targetHandle": "cd11a3f3-e196-4c37-81cc-b7d07d4f704e-0",
      "type": "main",
      "zIndex": 69,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "d0c03d92-d081-44fb-89b0-bfac380312d7",
      "source": "a206f898-1e62-4297-acfa-2f32ab0d63f4",
      "sourceHandle": "a206f898-1e62-4297-acfa-2f32ab0d63f4-0",
      "target": "a7fb83e8-1498-4a2d-8a01-2545ee7a38cf",
      "targetHandle": "a7fb83e8-1498-4a2d-8a01-2545ee7a38cf-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "fc84006c-f1af-454e-9e6a-3b7cfac80d96",
      "source": "e4e3c71b-e309-459e-a16e-373ad3762cd8",
      "sourceHandle": "e4e3c71b-e309-459e-a16e-373ad3762cd8-0",
      "target": "a206f898-1e62-4297-acfa-2f32ab0d63f4",
      "targetHandle": "a206f898-1e62-4297-acfa-2f32ab0d63f4-0",
      "type": "main",
      "zIndex": 49,
    },
  ],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "36ecdf30-ef07-478f-882c-5bb7019d447a",
        "inputData": Object {
          "2": 25,
        },
        "schemaId": "chainner:image:average_color_fix",
      },
      "height": 300,
      "id": "36ecdf30-ef07-478f-882c-5bb7019d447a",
      "position": Object {
        "x": 169.046875,
        "y": 933,
      },
      "selected": false,
      "type": "regularNode",
      "width": 279,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "a206f898-1e62-4297-acfa-2f32ab0d63f4",
        "inputData": Object {
          "1": 10,
          "2": 8,
        },
        "schemaId": "chainner:image:gaussian_blur",
      },
      "height": 342,
      "id": "a206f898-1e62-4297-acfa-2f32ab0d63f4",
      "position": Object {
        "x": 575.046875,
        "y": 499,
      },
      "selected": false,
      "type": "regularNode",
      "width": 257,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "a7fb83e8-1498-4a2d-8a01-2545ee7a38cf",
        "inputData": Object {
          "1": 3,
        },
        "schemaId": "chainner:image:sharpen",
      },
      "height": 260,
      "id": "a7fb83e8-1498-4a2d-8a01-2545ee7a38cf",
      "position": Object {
        "x": 979.046875,
        "y": 603,
      },
      "selected": false,
      "type": "regularNode",
      "width": 257,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "bbdbd06c-77d4-4484-8e40-bacf8be550f3",
        "inputData": Object {
          "1": 67,
          "3": 22,
        },
        "schemaId": "chainner:image:add_normals",
      },
      "height": 350,
      "id": "bbdbd06c-77d4-4484-8e40-bacf8be550f3",
      "position": Object {
        "x": 461.046875,
        "y": 1499,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "cd11a3f3-e196-4c37-81cc-b7d07d4f704e",
        "inputData": Object {},
        "schemaId": "chainner:image:normalize_normal_map",
      },
      "height": 178,
      "id": "cd11a3f3-e196-4c37-81cc-b7d07d4f704e",
      "position": Object {
        "x": 787.046875,
        "y": 1529,
      },
      "selected": true,
      "type": "regularNode",
      "width": 282,
      "zIndex": 70,
    },
    Object {
      "data": Object {
        "id": "ce5d04ca-a08a-4ecf-a07a-dcce789af967",
        "inputData": Object {
          "2": "L*a*b*",
          "3": "0",
          "4": 1,
        },
        "schemaId": "chainner:image:color_transfer",
      },
      "height": 464,
      "id": "ce5d04ca-a08a-4ecf-a07a-dcce789af967",
      "position": Object {
        "x": 634.046875,
        "y": 941,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "e4e3c71b-e309-459e-a16e-373ad3762cd8",
        "inputData": Object {
          "1": 13.8,
          "2": 6.8,
        },
        "schemaId": "chainner:image:gaussian_blur",
      },
      "height": 342,
      "id": "e4e3c71b-e309-459e-a16e-373ad3762cd8",
      "position": Object {
        "x": 144.046875,
        "y": 431,
      },
      "selected": false,
      "type": "regularNode",
      "width": 257,
      "zIndex": 50,
    },
  ],
  "tamperedWith": false,
  "viewport": Object {
    "x": 0,
    "y": 0,
    "zoom": 1,
  },
}
`;

exports[`Read save file image-input-output.chn 1`] = `
Object {
  "edges": Array [
    Object {
      "animated": false,
      "data": Object {},
      "id": "02a7d939-25a6-4163-81c7-428aae91bd46",
      "source": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d",
      "sourceHandle": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d-2",
      "target": "891982b8-2d6a-4228-aefb-2e0ef91796aa",
      "targetHandle": "891982b8-2d6a-4228-aefb-2e0ef91796aa-3",
      "type": "main",
      "zIndex": 69,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "4c776107-34d2-4aca-8133-2b9e5143f3a9",
      "source": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d",
      "sourceHandle": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d-0",
      "target": "891982b8-2d6a-4228-aefb-2e0ef91796aa",
      "targetHandle": "891982b8-2d6a-4228-aefb-2e0ef91796aa-0",
      "type": "main",
      "zIndex": 69,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "72c744c1-652b-4cff-b0d3-b17958cb692c",
      "source": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d",
      "sourceHandle": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d-0",
      "target": "491b5a02-0d03-4299-a89e-bc9095175220",
      "targetHandle": "491b5a02-0d03-4299-a89e-bc9095175220-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "fc1c2d5e-26e2-458b-aec0-d1be2118900d",
      "source": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d",
      "sourceHandle": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d-1",
      "target": "891982b8-2d6a-4228-aefb-2e0ef91796aa",
      "targetHandle": "891982b8-2d6a-4228-aefb-2e0ef91796aa-1",
      "type": "main",
      "zIndex": 69,
    },
  ],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "491b5a02-0d03-4299-a89e-bc9095175220",
        "inputData": Object {},
        "schemaId": "chainner:image:preview",
      },
      "height": 120,
      "id": "491b5a02-0d03-4299-a89e-bc9095175220",
      "position": Object {
        "x": 694.046875,
        "y": 145,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "891982b8-2d6a-4228-aefb-2e0ef91796aa",
        "inputData": Object {
          "2": "foo",
          "3": "",
          "4": "jpg",
        },
        "schemaId": "chainner:image:save",
      },
      "height": 448,
      "id": "891982b8-2d6a-4228-aefb-2e0ef91796aa",
      "position": Object {
        "x": 697.046875,
        "y": 311,
      },
      "selected": false,
      "type": "regularNode",
      "width": 265,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d",
        "inputData": Object {},
        "schemaId": "chainner:image:load",
      },
      "height": 300,
      "id": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d",
      "position": Object {
        "x": 96.609375,
        "y": 144,
      },
      "selected": false,
      "type": "regularNode",
      "width": 257,
      "zIndex": 50,
    },
  ],
  "tamperedWith": false,
  "viewport": Object {
    "x": 0,
    "y": 0,
    "zoom": 1,
  },
}
`;

exports[`Read save file image-iterator.chn 1`] = `
Object {
  "edges": Array [
    Object {
      "animated": false,
      "data": Object {},
      "id": "575fe457-3a19-4e6b-ae68-f070259b37ce",
      "source": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2",
      "sourceHandle": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2-1",
      "target": "17750f85-fd24-4089-9fde-2ca8a1fd8abe",
      "targetHandle": "17750f85-fd24-4089-9fde-2ca8a1fd8abe-1",
      "type": "main",
      "zIndex": 79,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "767d6143-1ea2-42d5-87e7-a2ad0c9480da",
      "source": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2",
      "sourceHandle": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2-0",
      "target": "17750f85-fd24-4089-9fde-2ca8a1fd8abe",
      "targetHandle": "17750f85-fd24-4089-9fde-2ca8a1fd8abe-0",
      "type": "main",
      "zIndex": 79,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "ae8370cb-8e62-4d7e-b2b1-9fcc0158546a",
      "source": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2",
      "sourceHandle": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2-3",
      "target": "17750f85-fd24-4089-9fde-2ca8a1fd8abe",
      "targetHandle": "17750f85-fd24-4089-9fde-2ca8a1fd8abe-3",
      "type": "main",
      "zIndex": 79,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "c15cf2bf-0a81-4deb-a7fd-1ed8026acf7f",
      "source": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2",
      "sourceHandle": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2-2",
      "target": "17750f85-fd24-4089-9fde-2ca8a1fd8abe",
      "targetHandle": "17750f85-fd24-4089-9fde-2ca8a1fd8abe-2",
      "type": "main",
      "zIndex": 79,
    },
  ],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "d237f8b4-1953-44d4-978c-d5cf7c4c84eb",
        "inputData": Object {
          "0": "C:\\\\Users\\\\micha\\\\Desktop\\\\wood-test",
        },
        "iteratorSize": Object {
          "height": 720,
          "offsetLeft": 9,
          "offsetTop": 163,
          "width": 1280,
        },
        "schemaId": "chainner:image:file_iterator",
      },
      "height": 908,
      "id": "d237f8b4-1953-44d4-978c-d5cf7c4c84eb",
      "position": Object {
        "x": 113.046875,
        "y": 157,
      },
      "selected": true,
      "type": "iterator",
      "width": 1298,
      "zIndex": 78,
    },
    Object {
      "data": Object {
        "id": "17750f85-fd24-4089-9fde-2ca8a1fd8abe",
        "inputData": Object {
          "2": "",
          "3": "",
          "4": "png",
        },
        "parentNode": "d237f8b4-1953-44d4-978c-d5cf7c4c84eb",
        "schemaId": "chainner:image:save",
      },
      "height": 448,
      "id": "17750f85-fd24-4089-9fde-2ca8a1fd8abe",
      "parentNode": "d237f8b4-1953-44d4-978c-d5cf7c4c84eb",
      "position": Object {
        "x": 670,
        "y": 284,
      },
      "selected": false,
      "type": "regularNode",
      "width": 265,
      "zIndex": 80,
    },
    Object {
      "data": Object {
        "id": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2",
        "inputData": Object {},
        "parentNode": "d237f8b4-1953-44d4-978c-d5cf7c4c84eb",
        "schemaId": "chainner:image:file_iterator_load",
      },
      "height": 298,
      "id": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2",
      "parentNode": "d237f8b4-1953-44d4-978c-d5cf7c4c84eb",
      "position": Object {
        "x": 9,
        "y": 163,
      },
      "selected": false,
      "type": "iteratorHelper",
      "width": 264,
      "zIndex": 80,
    },
  ],
  "tamperedWith": false,
  "viewport": Object {
    "x": 0,
    "y": 0,
    "zoom": 1,
  },
}
`;

exports[`Read save file image-utilities.chn 1`] = `
Object {
  "edges": Array [
    Object {
      "animated": false,
      "data": Object {},
      "id": "131a876a-9792-4386-8134-5fca38572daa",
      "source": "9fe50d97-8d04-43b7-adde-f5dfad7b577f",
      "sourceHandle": "9fe50d97-8d04-43b7-adde-f5dfad7b577f-0",
      "target": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9",
      "targetHandle": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9-1",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "27c816ae-d0de-4380-943b-9ef2c9248c9d",
      "source": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9",
      "sourceHandle": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9-0",
      "target": "89d518ad-2769-4eee-81e5-5b7876cfc4f1",
      "targetHandle": "89d518ad-2769-4eee-81e5-5b7876cfc4f1-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "371a6e2f-c7f8-4c81-92be-1eab530cd346",
      "source": "7094b9d4-3173-450f-b491-3c6936c510ab",
      "sourceHandle": "7094b9d4-3173-450f-b491-3c6936c510ab-0",
      "target": "c56c2f68-0478-4db5-b038-24f83f8ae275",
      "targetHandle": "c56c2f68-0478-4db5-b038-24f83f8ae275-0",
      "type": "main",
      "zIndex": 69,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "5913e9ba-c2c7-4836-a3b4-7375ca75a7ad",
      "source": "ad24cc0b-36ac-415f-9347-c6da40edec4e",
      "sourceHandle": "ad24cc0b-36ac-415f-9347-c6da40edec4e-0",
      "target": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9",
      "targetHandle": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "63490a2f-b598-433a-864e-4a08ec2e7cfb",
      "source": "9fe50d97-8d04-43b7-adde-f5dfad7b577f",
      "sourceHandle": "9fe50d97-8d04-43b7-adde-f5dfad7b577f-0",
      "target": "246c1a4b-9d15-4e93-b296-9ca05a51170a",
      "targetHandle": "246c1a4b-9d15-4e93-b296-9ca05a51170a-1",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "6f75d981-4acc-4501-a370-ba466dd8001e",
      "source": "9fe50d97-8d04-43b7-adde-f5dfad7b577f",
      "sourceHandle": "9fe50d97-8d04-43b7-adde-f5dfad7b577f-0",
      "target": "ad24cc0b-36ac-415f-9347-c6da40edec4e",
      "targetHandle": "ad24cc0b-36ac-415f-9347-c6da40edec4e-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "73804025-435d-4e52-bd8b-caffdd1f6799",
      "source": "c104d1f4-02cc-4e8c-a1cc-21dec7afaa93",
      "sourceHandle": "c104d1f4-02cc-4e8c-a1cc-21dec7afaa93-0",
      "target": "246c1a4b-9d15-4e93-b296-9ca05a51170a",
      "targetHandle": "246c1a4b-9d15-4e93-b296-9ca05a51170a-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "b807296b-cb0e-4073-bc96-d56e2ff191ce",
      "source": "246c1a4b-9d15-4e93-b296-9ca05a51170a",
      "sourceHandle": "246c1a4b-9d15-4e93-b296-9ca05a51170a-0",
      "target": "7094b9d4-3173-450f-b491-3c6936c510ab",
      "targetHandle": "7094b9d4-3173-450f-b491-3c6936c510ab-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "cd968055-e15d-4897-b09c-20d95129f2d1",
      "source": "ad24cc0b-36ac-415f-9347-c6da40edec4e",
      "sourceHandle": "ad24cc0b-36ac-415f-9347-c6da40edec4e-0",
      "target": "7ae37f51-b9d9-41d8-aed7-b6f5a0cea0d6",
      "targetHandle": "7ae37f51-b9d9-41d8-aed7-b6f5a0cea0d6-0",
      "type": "main",
      "zIndex": 49,
    },
  ],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "246c1a4b-9d15-4e93-b296-9ca05a51170a",
        "inputData": Object {
          "2": 69,
          "4": 28,
          "5": 81,
        },
        "schemaId": "chainner:image:overlay",
      },
      "height": 456,
      "id": "246c1a4b-9d15-4e93-b296-9ca05a51170a",
      "position": Object {
        "x": 453.03125,
        "y": 113,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "7094b9d4-3173-450f-b491-3c6936c510ab",
        "inputData": Object {
          "1": "0",
        },
        "schemaId": "chainner:image:flip",
      },
      "height": 260,
      "id": "7094b9d4-3173-450f-b491-3c6936c510ab",
      "position": Object {
        "x": 222.71233886887774,
        "y": 1112.075862240231,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "7ae37f51-b9d9-41d8-aed7-b6f5a0cea0d6",
        "inputData": Object {
          "1": "1",
          "2": 34,
        },
        "schemaId": "chainner:image:create_border",
      },
      "height": 342,
      "id": "7ae37f51-b9d9-41d8-aed7-b6f5a0cea0d6",
      "position": Object {
        "x": 921.6036887897096,
        "y": 365.42388294050994,
      },
      "selected": false,
      "type": "regularNode",
      "width": 283,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "89d518ad-2769-4eee-81e5-5b7876cfc4f1",
        "inputData": Object {
          "1": 243,
          "2": 3,
        },
        "schemaId": "chainner:image:shift",
      },
      "height": 342,
      "id": "89d518ad-2769-4eee-81e5-5b7876cfc4f1",
      "position": Object {
        "x": 1017.8220871882434,
        "y": 930.7055908254938,
      },
      "selected": false,
      "type": "regularNode",
      "width": 283,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9",
        "inputData": Object {},
        "schemaId": "chainner:image:difference",
      },
      "height": 218,
      "id": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9",
      "position": Object {
        "x": 592.7247701547936,
        "y": 985.0646017506039,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "9fe50d97-8d04-43b7-adde-f5dfad7b577f",
        "inputData": Object {
          "4": "horizontal",
        },
        "schemaId": "chainner:image:stack",
      },
      "height": 380,
      "id": "9fe50d97-8d04-43b7-adde-f5dfad7b577f",
      "position": Object {
        "x": 108.03125,
        "y": 498,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "ad24cc0b-36ac-415f-9347-c6da40edec4e",
        "inputData": Object {
          "1": "1",
        },
        "schemaId": "chainner:image:change_colorspace",
      },
      "height": 260,
      "id": "ad24cc0b-36ac-415f-9347-c6da40edec4e",
      "position": Object {
        "x": 515.03125,
        "y": 615,
      },
      "selected": false,
      "type": "regularNode",
      "width": 244,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "c104d1f4-02cc-4e8c-a1cc-21dec7afaa93",
        "inputData": Object {
          "1": "Foo bar",
        },
        "schemaId": "chainner:image:caption",
      },
      "height": 260,
      "id": "c104d1f4-02cc-4e8c-a1cc-21dec7afaa93",
      "position": Object {
        "x": 95.03125,
        "y": 162,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "c56c2f68-0478-4db5-b038-24f83f8ae275",
        "inputData": Object {
          "1": 0,
        },
        "schemaId": "chainner:image:rotate",
      },
      "height": 260,
      "id": "c56c2f68-0478-4db5-b038-24f83f8ae275",
      "position": Object {
        "x": 672.5530413540804,
        "y": 1299.5404330540307,
      },
      "selected": true,
      "type": "regularNode",
      "width": 242,
      "zIndex": 70,
    },
  ],
  "tamperedWith": false,
  "viewport": Object {
    "x": 0,
    "y": 0,
    "zoom": 1,
  },
}
`;

exports[`Read save file ncnn.chn 1`] = `
Object {
  "edges": Array [
    Object {
      "animated": false,
      "data": Object {},
      "id": "35fe815b-c97b-4768-b976-d3b476e2fddb",
      "source": "bb5765f1-023f-46df-8fb2-33e5ad839427",
      "sourceHandle": "bb5765f1-023f-46df-8fb2-33e5ad839427-0",
      "target": "444d3246-76ad-4ba1-8b50-4ff2527bab87",
      "targetHandle": "444d3246-76ad-4ba1-8b50-4ff2527bab87-1",
      "type": "main",
      "zIndex": 69,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "9e1ee957-9738-4928-bd2f-b232a10afecf",
      "source": "bb5765f1-023f-46df-8fb2-33e5ad839427",
      "sourceHandle": "bb5765f1-023f-46df-8fb2-33e5ad839427-0",
      "target": "24b604f1-4c1b-40e1-a03b-3dfc6b2ba8df",
      "targetHandle": "24b604f1-4c1b-40e1-a03b-3dfc6b2ba8df-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "d33b8c77-c502-44c6-b297-1269534ef2a2",
      "source": "bb5765f1-023f-46df-8fb2-33e5ad839427",
      "sourceHandle": "bb5765f1-023f-46df-8fb2-33e5ad839427-0",
      "target": "5961ee68-6b8f-43ad-9120-52e06689ae77",
      "targetHandle": "5961ee68-6b8f-43ad-9120-52e06689ae77-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "e285a65e-5c8a-412b-b8db-89df232cdb9d",
      "source": "bb5765f1-023f-46df-8fb2-33e5ad839427",
      "sourceHandle": "bb5765f1-023f-46df-8fb2-33e5ad839427-0",
      "target": "444d3246-76ad-4ba1-8b50-4ff2527bab87",
      "targetHandle": "444d3246-76ad-4ba1-8b50-4ff2527bab87-0",
      "type": "main",
      "zIndex": 69,
    },
  ],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "24b604f1-4c1b-40e1-a03b-3dfc6b2ba8df",
        "inputData": Object {
          "2": "",
        },
        "schemaId": "chainner:ncnn:save_model",
      },
      "height": 284,
      "id": "24b604f1-4c1b-40e1-a03b-3dfc6b2ba8df",
      "position": Object {
        "x": 544.03125,
        "y": 308,
      },
      "selected": false,
      "type": "regularNode",
      "width": 257,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "444d3246-76ad-4ba1-8b50-4ff2527bab87",
        "inputData": Object {
          "2": 23,
        },
        "schemaId": "chainner:ncnn:interpolate_models",
      },
      "height": 310,
      "id": "444d3246-76ad-4ba1-8b50-4ff2527bab87",
      "position": Object {
        "x": 795.03125,
        "y": 635,
      },
      "selected": true,
      "type": "regularNode",
      "width": 248,
      "zIndex": 70,
    },
    Object {
      "data": Object {
        "id": "5961ee68-6b8f-43ad-9120-52e06689ae77",
        "inputData": Object {},
        "schemaId": "chainner:ncnn:upscale_image",
      },
      "height": 218,
      "id": "5961ee68-6b8f-43ad-9120-52e06689ae77",
      "position": Object {
        "x": 390.03125,
        "y": 676,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "bb5765f1-023f-46df-8fb2-33e5ad839427",
        "inputData": Object {},
        "schemaId": "chainner:ncnn:load_model",
      },
      "height": 342,
      "id": "bb5765f1-023f-46df-8fb2-33e5ad839427",
      "position": Object {
        "x": 95.03125,
        "y": 321,
      },
      "selected": false,
      "type": "regularNode",
      "width": 257,
      "zIndex": 50,
    },
  ],
  "tamperedWith": false,
  "viewport": Object {
    "x": 0,
    "y": 0,
    "zoom": 1,
  },
}
`;

exports[`Read save file pytorch.chn 1`] = `
Object {
  "edges": Array [
    Object {
      "animated": false,
      "data": Object {},
      "id": "008463f1-77cf-4f39-b888-6f7bdbf6f375",
      "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
      "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-0",
      "target": "3162a7ce-116b-4f7f-969f-e9a0d7973d61",
      "targetHandle": "3162a7ce-116b-4f7f-969f-e9a0d7973d61-0",
      "type": "main",
      "zIndex": 69,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "0c9a3fe3-b2a5-419b-8b04-10cdbeb0ce36",
      "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
      "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-1",
      "target": "1e54b9e8-03ba-4705-8ef9-d8cd0c8c2d43",
      "targetHandle": "1e54b9e8-03ba-4705-8ef9-d8cd0c8c2d43-2",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "189cbc3a-d9a3-4c3e-bc7b-f432820668d2",
      "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
      "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-0",
      "target": "8119c5d4-b2f9-4ffa-8621-a84dfd01d704",
      "targetHandle": "8119c5d4-b2f9-4ffa-8621-a84dfd01d704-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "2eb949f9-b277-4f73-8053-7ac1646649d4",
      "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
      "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-0",
      "target": "0ff35754-a542-4812-b3d5-2f1897c1972b",
      "targetHandle": "0ff35754-a542-4812-b3d5-2f1897c1972b-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "3b4a14ed-8ad0-4c78-8b74-8075555d5375",
      "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
      "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-1",
      "target": "8119c5d4-b2f9-4ffa-8621-a84dfd01d704",
      "targetHandle": "8119c5d4-b2f9-4ffa-8621-a84dfd01d704-2",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "72975f3e-aad2-46d0-8a17-20eeda1f14f8",
      "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
      "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-0",
      "target": "1e54b9e8-03ba-4705-8ef9-d8cd0c8c2d43",
      "targetHandle": "1e54b9e8-03ba-4705-8ef9-d8cd0c8c2d43-0",
      "type": "main",
      "zIndex": 49,
    },
    Object {
      "animated": false,
      "data": Object {},
      "id": "9ef7dac4-e560-4a87-b572-c22e7be3d516",
      "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
      "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-0",
      "target": "3162a7ce-116b-4f7f-969f-e9a0d7973d61",
      "targetHandle": "3162a7ce-116b-4f7f-969f-e9a0d7973d61-1",
      "type": "main",
      "zIndex": 69,
    },
  ],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "0ff35754-a542-4812-b3d5-2f1897c1972b",
        "inputData": Object {},
        "schemaId": "chainner:pytorch:upscale_image",
      },
      "height": 218,
      "id": "0ff35754-a542-4812-b3d5-2f1897c1972b",
      "position": Object {
        "x": 463.0481218063261,
        "y": 54.77750343838076,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "1e54b9e8-03ba-4705-8ef9-d8cd0c8c2d43",
        "inputData": Object {
          "2": "",
        },
        "schemaId": "chainner:pytorch:save_model",
      },
      "height": 284,
      "id": "1e54b9e8-03ba-4705-8ef9-d8cd0c8c2d43",
      "position": Object {
        "x": 777.4674540587876,
        "y": 306.40246044613554,
      },
      "selected": false,
      "type": "regularNode",
      "width": 257,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "3162a7ce-116b-4f7f-969f-e9a0d7973d61",
        "inputData": Object {
          "2": 74,
        },
        "schemaId": "chainner:pytorch:interpolate_models",
      },
      "height": 310,
      "id": "3162a7ce-116b-4f7f-969f-e9a0d7973d61",
      "position": Object {
        "x": 137.4541188825251,
        "y": 757.7994492005994,
      },
      "selected": true,
      "type": "regularNode",
      "width": 248,
      "zIndex": 70,
    },
    Object {
      "data": Object {
        "id": "8119c5d4-b2f9-4ffa-8621-a84dfd01d704",
        "inputData": Object {
          "2": "",
        },
        "schemaId": "chainner:pytorch:convert_to_onnx",
      },
      "height": 284,
      "id": "8119c5d4-b2f9-4ffa-8621-a84dfd01d704",
      "position": Object {
        "x": 762.9729019259927,
        "y": 669.0123022306777,
      },
      "selected": false,
      "type": "regularNode",
      "width": 257,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
        "inputData": Object {
          "0": "C:\\\\DS3TexUp\\\\Cupscale 1.39.0f1\\\\CupscaleData\\\\models\\\\ESRGAN\\\\4x-UltraSharp.pth",
        },
        "schemaId": "chainner:pytorch:load_model",
      },
      "height": 324,
      "id": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
      "position": Object {
        "x": 54.03125,
        "y": 285,
      },
      "selected": false,
      "type": "regularNode",
      "width": 258,
      "zIndex": 50,
    },
  ],
  "tamperedWith": false,
  "viewport": Object {
    "x": 0,
    "y": 0,
    "zoom": 1,
  },
}
`;

exports[`Read save file utilities.chn 1`] = `
Object {
  "edges": Array [],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "18acc79d-abf9-46f1-9b4b-651836a9d3b1",
        "inputData": Object {
          "0": "-",
          "1": "Foo",
          "2": "Bar",
          "3": "",
          "4": "",
        },
        "schemaId": "chainner:utility:text_append",
      },
      "height": 548,
      "id": "18acc79d-abf9-46f1-9b4b-651836a9d3b1",
      "position": Object {
        "x": 592.03125,
        "y": 283,
      },
      "selected": false,
      "type": "regularNode",
      "width": 242,
      "zIndex": 50,
    },
    Object {
      "data": Object {
        "id": "56909a51-acd0-4e3d-b515-b3cb34e725c5",
        "inputData": Object {
          "0": 1,
          "1": "mul",
          "2": 5,
        },
        "schemaId": "chainner:utility:math",
      },
      "height": 384,
      "id": "56909a51-acd0-4e3d-b515-b3cb34e725c5",
      "position": Object {
        "x": 95.03125,
        "y": 377,
      },
      "selected": true,
      "type": "regularNode",
      "width": 257,
      "zIndex": 70,
    },
    Object {
      "data": Object {
        "id": "e21f5bf4-8171-43ce-a483-5152c5b7022e",
        "inputData": Object {
          "0": "Hi mom!",
        },
        "schemaId": "chainner:utility:note",
      },
      "height": 202,
      "id": "e21f5bf4-8171-43ce-a483-5152c5b7022e",
      "position": Object {
        "x": 282.03125,
        "y": 81,
      },
      "selected": false,
      "type": "regularNode",
      "width": 258,
      "zIndex": 50,
    },
  ],
  "tamperedWith": false,
  "viewport": Object {
    "x": 0,
    "y": 0,
    "zoom": 1,
  },
}
`;

exports[`Write save file box-median-blur.chn 1`] = `
Object {
  "checksum": "cbc68bacb9e1af4e16846bb25502daa9",
  "content": Object {
    "edges": Array [
      Object {
        "animated": false,
        "data": Object {},
        "id": "e8a88e5a-6d1f-44a6-9e42-e5f1b633d564",
        "source": "13626da8-98e4-4fc6-91ef-6b0e8e875619",
        "sourceHandle": "13626da8-98e4-4fc6-91ef-6b0e8e875619-0",
        "target": "e7c3d964-716d-43d7-83b9-83825c35a7e2",
        "targetHandle": "e7c3d964-716d-43d7-83b9-83825c35a7e2-0",
        "type": "main",
        "zIndex": 49,
      },
    ],
    "nodes": Array [
      Object {
        "data": Object {
          "id": "13626da8-98e4-4fc6-91ef-6b0e8e875619",
          "inputData": Object {
            "1": 3,
            "2": 7,
          },
          "schemaId": "chainner:image:blur",
        },
        "height": 339,
        "id": "13626da8-98e4-4fc6-91ef-6b0e8e875619",
        "position": Object {
          "x": 480,
          "y": 400,
        },
        "selected": false,
        "type": "regularNode",
        "width": 257,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "e7c3d964-716d-43d7-83b9-83825c35a7e2",
          "inputData": Object {
            "1": 4,
          },
          "schemaId": "chainner:image:median_blur",
        },
        "height": 257,
        "id": "e7c3d964-716d-43d7-83b9-83825c35a7e2",
        "position": Object {
          "x": 768,
          "y": 400,
        },
        "selected": false,
        "type": "regularNode",
        "width": 257,
        "zIndex": 50,
      },
    ],
    "viewport": Object {
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
  },
  "migration": 8,
  "timestamp": "",
  "version": "",
}
`;

exports[`Write save file image-adjustments.chn 1`] = `
Object {
  "checksum": "5e390b4028ca1e3d9849869c97336359",
  "content": Object {
    "edges": Array [],
    "nodes": Array [
      Object {
        "data": Object {
          "id": "23a197cf-248a-4c35-8aa4-5c9a32863d44",
          "inputData": Object {
            "1": 69,
            "2": 76,
            "3": "2",
          },
          "schemaId": "chainner:image:threshold",
        },
        "height": 392,
        "id": "23a197cf-248a-4c35-8aa4-5c9a32863d44",
        "position": Object {
          "x": 625.8070606398546,
          "y": 592.9030240407762,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "59b0e388-685e-4b7b-8ffe-c64bc98a350f",
          "inputData": Object {
            "1": 24,
            "2": 43,
          },
          "schemaId": "chainner:image:brightness_and_contrast",
        },
        "height": 310,
        "id": "59b0e388-685e-4b7b-8ffe-c64bc98a350f",
        "position": Object {
          "x": 571.3328481394495,
          "y": 163.52957902171042,
        },
        "selected": false,
        "type": "regularNode",
        "width": 278,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "5acd95ce-3be7-42d0-9388-2e681fe39d1c",
          "inputData": Object {
            "1": -61,
            "2": 68,
          },
          "schemaId": "chainner:image:hue_and_saturation",
        },
        "height": 310,
        "id": "5acd95ce-3be7-42d0-9388-2e681fe39d1c",
        "position": Object {
          "x": 1034.6005807596155,
          "y": 179.7658590325766,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "75cbaa5e-7d31-4990-b46d-8087e550a729",
          "inputData": Object {
            "1": 90,
            "2": 0,
            "3": 0,
            "4": 9,
            "5": 2,
          },
          "schemaId": "chainner:image:threshold_adaptive",
        },
        "height": 572,
        "id": "75cbaa5e-7d31-4990-b46d-8087e550a729",
        "position": Object {
          "x": 1007.135509649303,
          "y": 537.8809142551769,
        },
        "selected": false,
        "type": "regularNode",
        "width": 262,
        "zIndex": 50,
      },
    ],
    "viewport": Object {
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
  },
  "migration": 8,
  "timestamp": "",
  "version": "",
}
`;

exports[`Write save file image-channels.chn 1`] = `
Object {
  "checksum": "522eead1dd254fca1995e60e0e6230e7",
  "content": Object {
    "edges": Array [
      Object {
        "animated": false,
        "data": Object {},
        "id": "1cbdd398-aeda-4abb-a655-a02d745ea32b",
        "source": "9a3340d5-b39b-44e2-bbae-129df1a0ebdd",
        "sourceHandle": "9a3340d5-b39b-44e2-bbae-129df1a0ebdd-1",
        "target": "0f5b12e2-78db-4d23-be0e-f1247b0d9a5a",
        "targetHandle": "0f5b12e2-78db-4d23-be0e-f1247b0d9a5a-1",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "2f7e467d-5d40-4ab4-9e28-8f5fc730f50e",
        "source": "0f02da52-de20-484f-a4ee-fe4f5c16b09f",
        "sourceHandle": "0f02da52-de20-484f-a4ee-fe4f5c16b09f-0",
        "target": "0f5b12e2-78db-4d23-be0e-f1247b0d9a5a",
        "targetHandle": "0f5b12e2-78db-4d23-be0e-f1247b0d9a5a-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "325201b4-fe64-4820-9868-ae3c46741e5a",
        "source": "6ca1e847-b2be-461f-add5-7442eb466d27",
        "sourceHandle": "6ca1e847-b2be-461f-add5-7442eb466d27-0",
        "target": "0df5f783-71c1-42ef-8fcf-2c4ac91c6923",
        "targetHandle": "0df5f783-71c1-42ef-8fcf-2c4ac91c6923-0",
        "type": "main",
        "zIndex": 69,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "36926793-4fbd-4914-9fcb-7ff357209a33",
        "source": "6ca1e847-b2be-461f-add5-7442eb466d27",
        "sourceHandle": "6ca1e847-b2be-461f-add5-7442eb466d27-0",
        "target": "0f02da52-de20-484f-a4ee-fe4f5c16b09f",
        "targetHandle": "0f02da52-de20-484f-a4ee-fe4f5c16b09f-0",
        "type": "main",
        "zIndex": 69,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "3f0a792e-89b6-4672-9ba6-db4d32b4c65b",
        "source": "6ca1e847-b2be-461f-add5-7442eb466d27",
        "sourceHandle": "6ca1e847-b2be-461f-add5-7442eb466d27-0",
        "target": "9a3340d5-b39b-44e2-bbae-129df1a0ebdd",
        "targetHandle": "9a3340d5-b39b-44e2-bbae-129df1a0ebdd-0",
        "type": "main",
        "zIndex": 69,
      },
    ],
    "nodes": Array [
      Object {
        "data": Object {
          "id": "0df5f783-71c1-42ef-8fcf-2c4ac91c6923",
          "inputData": Object {},
          "schemaId": "chainner:image:split_channels",
        },
        "height": 298,
        "id": "0df5f783-71c1-42ef-8fcf-2c4ac91c6923",
        "position": Object {
          "x": 479.85304269859705,
          "y": 250.19507910772893,
        },
        "selected": true,
        "type": "regularNode",
        "width": 242,
        "zIndex": 70,
      },
      Object {
        "data": Object {
          "id": "0f02da52-de20-484f-a4ee-fe4f5c16b09f",
          "inputData": Object {
            "1": 1,
          },
          "schemaId": "chainner:image:fill_alpha",
        },
        "height": 260,
        "id": "0f02da52-de20-484f-a4ee-fe4f5c16b09f",
        "position": Object {
          "x": 461.03125,
          "y": 626,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "0f5b12e2-78db-4d23-be0e-f1247b0d9a5a",
          "inputData": Object {},
          "schemaId": "chainner:image:merge_transparency",
        },
        "height": 218,
        "id": "0f5b12e2-78db-4d23-be0e-f1247b0d9a5a",
        "position": Object {
          "x": 823.03125,
          "y": 944,
        },
        "selected": false,
        "type": "regularNode",
        "width": 257,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "6ca1e847-b2be-461f-add5-7442eb466d27",
          "inputData": Object {},
          "schemaId": "chainner:image:merge_channels",
        },
        "height": 298,
        "id": "6ca1e847-b2be-461f-add5-7442eb466d27",
        "position": Object {
          "x": -89.06084168665939,
          "y": 220.21968356908422,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "9a3340d5-b39b-44e2-bbae-129df1a0ebdd",
          "inputData": Object {},
          "schemaId": "chainner:image:split_transparency",
        },
        "height": 218,
        "id": "9a3340d5-b39b-44e2-bbae-129df1a0ebdd",
        "position": Object {
          "x": 152.03125,
          "y": 721,
        },
        "selected": false,
        "type": "regularNode",
        "width": 244,
        "zIndex": 50,
      },
    ],
    "viewport": Object {
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
  },
  "migration": 8,
  "timestamp": "",
  "version": "",
}
`;

exports[`Write save file image-dim.chn 1`] = `
Object {
  "checksum": "e4f98dfd932ac1f101d76046d59bd66c",
  "content": Object {
    "edges": Array [
      Object {
        "animated": false,
        "data": Object {},
        "id": "08cce8c6-1519-47b2-bc9e-2791b06f8342",
        "source": "4bf814f8-2ede-4465-9fb3-10a40e7543fa",
        "sourceHandle": "4bf814f8-2ede-4465-9fb3-10a40e7543fa-1",
        "target": "2c77b070-2d17-418e-9a68-c9c0f1651619",
        "targetHandle": "2c77b070-2d17-418e-9a68-c9c0f1651619-2",
        "type": "main",
        "zIndex": 69,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "51373eef-dfc6-437a-8bcd-f7c1e15db205",
        "source": "4bf814f8-2ede-4465-9fb3-10a40e7543fa",
        "sourceHandle": "4bf814f8-2ede-4465-9fb3-10a40e7543fa-0",
        "target": "2c77b070-2d17-418e-9a68-c9c0f1651619",
        "targetHandle": "2c77b070-2d17-418e-9a68-c9c0f1651619-1",
        "type": "main",
        "zIndex": 69,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "7fa6b8d7-47ca-4263-82b9-865525989689",
        "source": "e07a2c2b-700d-4422-ae9a-8b22da0aaa62",
        "sourceHandle": "e07a2c2b-700d-4422-ae9a-8b22da0aaa62-0",
        "target": "2c77b070-2d17-418e-9a68-c9c0f1651619",
        "targetHandle": "2c77b070-2d17-418e-9a68-c9c0f1651619-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "f07d87a9-d6e6-47fe-8f49-830ccc280def",
        "source": "2c77b070-2d17-418e-9a68-c9c0f1651619",
        "sourceHandle": "2c77b070-2d17-418e-9a68-c9c0f1651619-0",
        "target": "14203edf-1335-4d4f-8174-a86ce0f53bcb",
        "targetHandle": "14203edf-1335-4d4f-8174-a86ce0f53bcb-0",
        "type": "main",
        "zIndex": 49,
      },
    ],
    "nodes": Array [
      Object {
        "data": Object {
          "id": "14203edf-1335-4d4f-8174-a86ce0f53bcb",
          "inputData": Object {
            "1": 120,
            "2": 340,
            "3": "4",
          },
          "schemaId": "chainner:image:resize_resolution",
        },
        "height": 424,
        "id": "14203edf-1335-4d4f-8174-a86ce0f53bcb",
        "position": Object {
          "x": 1043.046875,
          "y": 557,
        },
        "selected": true,
        "type": "regularNode",
        "width": 283,
        "zIndex": 70,
      },
      Object {
        "data": Object {
          "id": "2c77b070-2d17-418e-9a68-c9c0f1651619",
          "inputData": Object {
            "1": 1024,
            "2": 2048,
          },
          "schemaId": "chainner:image:tile_fill",
        },
        "height": 342,
        "id": "2c77b070-2d17-418e-9a68-c9c0f1651619",
        "position": Object {
          "x": 692.046875,
          "y": 424,
        },
        "selected": false,
        "type": "regularNode",
        "width": 283,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "4bf814f8-2ede-4465-9fb3-10a40e7543fa",
          "inputData": Object {},
          "schemaId": "chainner:image:get_dims",
        },
        "height": 258,
        "id": "4bf814f8-2ede-4465-9fb3-10a40e7543fa",
        "position": Object {
          "x": 135.046875,
          "y": 626,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "e07a2c2b-700d-4422-ae9a-8b22da0aaa62",
          "inputData": Object {
            "1": 350,
            "2": "3",
          },
          "schemaId": "chainner:image:resize_factor",
        },
        "height": 342,
        "id": "e07a2c2b-700d-4422-ae9a-8b22da0aaa62",
        "position": Object {
          "x": 309.046875,
          "y": 223,
        },
        "selected": false,
        "type": "regularNode",
        "width": 279,
        "zIndex": 50,
      },
    ],
    "viewport": Object {
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
  },
  "migration": 8,
  "timestamp": "",
  "version": "",
}
`;

exports[`Write save file image-filters.chn 1`] = `
Object {
  "checksum": "69b73b0c2a788c86d3c4ae8933f5aee4",
  "content": Object {
    "edges": Array [
      Object {
        "animated": false,
        "data": Object {},
        "id": "28b8e5bf-09c1-4518-9127-df1a959a4f00",
        "source": "e4e3c71b-e309-459e-a16e-373ad3762cd8",
        "sourceHandle": "e4e3c71b-e309-459e-a16e-373ad3762cd8-0",
        "target": "36ecdf30-ef07-478f-882c-5bb7019d447a",
        "targetHandle": "36ecdf30-ef07-478f-882c-5bb7019d447a-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "35a2263f-272c-4b53-8c36-148890f16c5a",
        "source": "36ecdf30-ef07-478f-882c-5bb7019d447a",
        "sourceHandle": "36ecdf30-ef07-478f-882c-5bb7019d447a-0",
        "target": "bbdbd06c-77d4-4484-8e40-bacf8be550f3",
        "targetHandle": "bbdbd06c-77d4-4484-8e40-bacf8be550f3-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "5002803f-f885-430f-958d-88000fb138d0",
        "source": "36ecdf30-ef07-478f-882c-5bb7019d447a",
        "sourceHandle": "36ecdf30-ef07-478f-882c-5bb7019d447a-0",
        "target": "ce5d04ca-a08a-4ecf-a07a-dcce789af967",
        "targetHandle": "ce5d04ca-a08a-4ecf-a07a-dcce789af967-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "94c6dc2c-f8bb-4605-b627-c51804328e58",
        "source": "a206f898-1e62-4297-acfa-2f32ab0d63f4",
        "sourceHandle": "a206f898-1e62-4297-acfa-2f32ab0d63f4-0",
        "target": "36ecdf30-ef07-478f-882c-5bb7019d447a",
        "targetHandle": "36ecdf30-ef07-478f-882c-5bb7019d447a-1",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "ab37d9e5-747a-414d-ac58-afa339d234b9",
        "source": "bbdbd06c-77d4-4484-8e40-bacf8be550f3",
        "sourceHandle": "bbdbd06c-77d4-4484-8e40-bacf8be550f3-0",
        "target": "cd11a3f3-e196-4c37-81cc-b7d07d4f704e",
        "targetHandle": "cd11a3f3-e196-4c37-81cc-b7d07d4f704e-0",
        "type": "main",
        "zIndex": 69,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "d0c03d92-d081-44fb-89b0-bfac380312d7",
        "source": "a206f898-1e62-4297-acfa-2f32ab0d63f4",
        "sourceHandle": "a206f898-1e62-4297-acfa-2f32ab0d63f4-0",
        "target": "a7fb83e8-1498-4a2d-8a01-2545ee7a38cf",
        "targetHandle": "a7fb83e8-1498-4a2d-8a01-2545ee7a38cf-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "fc84006c-f1af-454e-9e6a-3b7cfac80d96",
        "source": "e4e3c71b-e309-459e-a16e-373ad3762cd8",
        "sourceHandle": "e4e3c71b-e309-459e-a16e-373ad3762cd8-0",
        "target": "a206f898-1e62-4297-acfa-2f32ab0d63f4",
        "targetHandle": "a206f898-1e62-4297-acfa-2f32ab0d63f4-0",
        "type": "main",
        "zIndex": 49,
      },
    ],
    "nodes": Array [
      Object {
        "data": Object {
          "id": "36ecdf30-ef07-478f-882c-5bb7019d447a",
          "inputData": Object {
            "2": 25,
          },
          "schemaId": "chainner:image:average_color_fix",
        },
        "height": 300,
        "id": "36ecdf30-ef07-478f-882c-5bb7019d447a",
        "position": Object {
          "x": 169.046875,
          "y": 933,
        },
        "selected": false,
        "type": "regularNode",
        "width": 279,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "a206f898-1e62-4297-acfa-2f32ab0d63f4",
          "inputData": Object {
            "1": 10,
            "2": 8,
          },
          "schemaId": "chainner:image:gaussian_blur",
        },
        "height": 342,
        "id": "a206f898-1e62-4297-acfa-2f32ab0d63f4",
        "position": Object {
          "x": 575.046875,
          "y": 499,
        },
        "selected": false,
        "type": "regularNode",
        "width": 257,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "a7fb83e8-1498-4a2d-8a01-2545ee7a38cf",
          "inputData": Object {
            "1": 3,
          },
          "schemaId": "chainner:image:sharpen",
        },
        "height": 260,
        "id": "a7fb83e8-1498-4a2d-8a01-2545ee7a38cf",
        "position": Object {
          "x": 979.046875,
          "y": 603,
        },
        "selected": false,
        "type": "regularNode",
        "width": 257,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "bbdbd06c-77d4-4484-8e40-bacf8be550f3",
          "inputData": Object {
            "1": 67,
            "3": 22,
          },
          "schemaId": "chainner:image:add_normals",
        },
        "height": 350,
        "id": "bbdbd06c-77d4-4484-8e40-bacf8be550f3",
        "position": Object {
          "x": 461.046875,
          "y": 1499,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "cd11a3f3-e196-4c37-81cc-b7d07d4f704e",
          "inputData": Object {},
          "schemaId": "chainner:image:normalize_normal_map",
        },
        "height": 178,
        "id": "cd11a3f3-e196-4c37-81cc-b7d07d4f704e",
        "position": Object {
          "x": 787.046875,
          "y": 1529,
        },
        "selected": true,
        "type": "regularNode",
        "width": 282,
        "zIndex": 70,
      },
      Object {
        "data": Object {
          "id": "ce5d04ca-a08a-4ecf-a07a-dcce789af967",
          "inputData": Object {
            "2": "L*a*b*",
            "3": "0",
            "4": 1,
          },
          "schemaId": "chainner:image:color_transfer",
        },
        "height": 464,
        "id": "ce5d04ca-a08a-4ecf-a07a-dcce789af967",
        "position": Object {
          "x": 634.046875,
          "y": 941,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "e4e3c71b-e309-459e-a16e-373ad3762cd8",
          "inputData": Object {
            "1": 13.8,
            "2": 6.8,
          },
          "schemaId": "chainner:image:gaussian_blur",
        },
        "height": 342,
        "id": "e4e3c71b-e309-459e-a16e-373ad3762cd8",
        "position": Object {
          "x": 144.046875,
          "y": 431,
        },
        "selected": false,
        "type": "regularNode",
        "width": 257,
        "zIndex": 50,
      },
    ],
    "viewport": Object {
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
  },
  "migration": 8,
  "timestamp": "",
  "version": "",
}
`;

exports[`Write save file image-input-output.chn 1`] = `
Object {
  "checksum": "a7638715714b8a8a65b2535e26d1f0e3",
  "content": Object {
    "edges": Array [
      Object {
        "animated": false,
        "data": Object {},
        "id": "02a7d939-25a6-4163-81c7-428aae91bd46",
        "source": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d",
        "sourceHandle": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d-2",
        "target": "891982b8-2d6a-4228-aefb-2e0ef91796aa",
        "targetHandle": "891982b8-2d6a-4228-aefb-2e0ef91796aa-3",
        "type": "main",
        "zIndex": 69,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "4c776107-34d2-4aca-8133-2b9e5143f3a9",
        "source": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d",
        "sourceHandle": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d-0",
        "target": "891982b8-2d6a-4228-aefb-2e0ef91796aa",
        "targetHandle": "891982b8-2d6a-4228-aefb-2e0ef91796aa-0",
        "type": "main",
        "zIndex": 69,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "72c744c1-652b-4cff-b0d3-b17958cb692c",
        "source": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d",
        "sourceHandle": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d-0",
        "target": "491b5a02-0d03-4299-a89e-bc9095175220",
        "targetHandle": "491b5a02-0d03-4299-a89e-bc9095175220-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "fc1c2d5e-26e2-458b-aec0-d1be2118900d",
        "source": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d",
        "sourceHandle": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d-1",
        "target": "891982b8-2d6a-4228-aefb-2e0ef91796aa",
        "targetHandle": "891982b8-2d6a-4228-aefb-2e0ef91796aa-1",
        "type": "main",
        "zIndex": 69,
      },
    ],
    "nodes": Array [
      Object {
        "data": Object {
          "id": "491b5a02-0d03-4299-a89e-bc9095175220",
          "inputData": Object {},
          "schemaId": "chainner:image:preview",
        },
        "height": 120,
        "id": "491b5a02-0d03-4299-a89e-bc9095175220",
        "position": Object {
          "x": 694.046875,
          "y": 145,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "891982b8-2d6a-4228-aefb-2e0ef91796aa",
          "inputData": Object {
            "2": "foo",
            "3": "",
            "4": "jpg",
          },
          "schemaId": "chainner:image:save",
        },
        "height": 448,
        "id": "891982b8-2d6a-4228-aefb-2e0ef91796aa",
        "position": Object {
          "x": 697.046875,
          "y": 311,
        },
        "selected": false,
        "type": "regularNode",
        "width": 265,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d",
          "inputData": Object {},
          "schemaId": "chainner:image:load",
        },
        "height": 300,
        "id": "fda0194b-47ac-4ce1-a5f6-6f1021a3110d",
        "position": Object {
          "x": 96.609375,
          "y": 144,
        },
        "selected": false,
        "type": "regularNode",
        "width": 257,
        "zIndex": 50,
      },
    ],
    "viewport": Object {
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
  },
  "migration": 8,
  "timestamp": "",
  "version": "",
}
`;

exports[`Write save file image-iterator.chn 1`] = `
Object {
  "checksum": "01eb8329fc451040c4dbeaf03bea17b1",
  "content": Object {
    "edges": Array [
      Object {
        "animated": false,
        "data": Object {},
        "id": "575fe457-3a19-4e6b-ae68-f070259b37ce",
        "source": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2",
        "sourceHandle": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2-1",
        "target": "17750f85-fd24-4089-9fde-2ca8a1fd8abe",
        "targetHandle": "17750f85-fd24-4089-9fde-2ca8a1fd8abe-1",
        "type": "main",
        "zIndex": 79,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "767d6143-1ea2-42d5-87e7-a2ad0c9480da",
        "source": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2",
        "sourceHandle": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2-0",
        "target": "17750f85-fd24-4089-9fde-2ca8a1fd8abe",
        "targetHandle": "17750f85-fd24-4089-9fde-2ca8a1fd8abe-0",
        "type": "main",
        "zIndex": 79,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "ae8370cb-8e62-4d7e-b2b1-9fcc0158546a",
        "source": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2",
        "sourceHandle": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2-3",
        "target": "17750f85-fd24-4089-9fde-2ca8a1fd8abe",
        "targetHandle": "17750f85-fd24-4089-9fde-2ca8a1fd8abe-3",
        "type": "main",
        "zIndex": 79,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "c15cf2bf-0a81-4deb-a7fd-1ed8026acf7f",
        "source": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2",
        "sourceHandle": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2-2",
        "target": "17750f85-fd24-4089-9fde-2ca8a1fd8abe",
        "targetHandle": "17750f85-fd24-4089-9fde-2ca8a1fd8abe-2",
        "type": "main",
        "zIndex": 79,
      },
    ],
    "nodes": Array [
      Object {
        "data": Object {
          "id": "d237f8b4-1953-44d4-978c-d5cf7c4c84eb",
          "inputData": Object {
            "0": "C:\\\\Users\\\\micha\\\\Desktop\\\\wood-test",
          },
          "iteratorSize": Object {
            "height": 720,
            "offsetLeft": 9,
            "offsetTop": 163,
            "width": 1280,
          },
          "schemaId": "chainner:image:file_iterator",
        },
        "height": 908,
        "id": "d237f8b4-1953-44d4-978c-d5cf7c4c84eb",
        "position": Object {
          "x": 113.046875,
          "y": 157,
        },
        "selected": true,
        "type": "iterator",
        "width": 1298,
        "zIndex": 78,
      },
      Object {
        "data": Object {
          "id": "17750f85-fd24-4089-9fde-2ca8a1fd8abe",
          "inputData": Object {
            "2": "",
            "3": "",
            "4": "png",
          },
          "parentNode": "d237f8b4-1953-44d4-978c-d5cf7c4c84eb",
          "schemaId": "chainner:image:save",
        },
        "height": 448,
        "id": "17750f85-fd24-4089-9fde-2ca8a1fd8abe",
        "parentNode": "d237f8b4-1953-44d4-978c-d5cf7c4c84eb",
        "position": Object {
          "x": 670,
          "y": 284,
        },
        "selected": false,
        "type": "regularNode",
        "width": 265,
        "zIndex": 80,
      },
      Object {
        "data": Object {
          "id": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2",
          "inputData": Object {},
          "parentNode": "d237f8b4-1953-44d4-978c-d5cf7c4c84eb",
          "schemaId": "chainner:image:file_iterator_load",
        },
        "height": 298,
        "id": "8bd9d4bf-a83b-4dea-9b09-929fb60067f2",
        "parentNode": "d237f8b4-1953-44d4-978c-d5cf7c4c84eb",
        "position": Object {
          "x": 9,
          "y": 163,
        },
        "selected": false,
        "type": "iteratorHelper",
        "width": 264,
        "zIndex": 80,
      },
    ],
    "viewport": Object {
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
  },
  "migration": 8,
  "timestamp": "",
  "version": "",
}
`;

exports[`Write save file image-utilities.chn 1`] = `
Object {
  "checksum": "b4c0577d34183f1a36d13daf9373d857",
  "content": Object {
    "edges": Array [
      Object {
        "animated": false,
        "data": Object {},
        "id": "131a876a-9792-4386-8134-5fca38572daa",
        "source": "9fe50d97-8d04-43b7-adde-f5dfad7b577f",
        "sourceHandle": "9fe50d97-8d04-43b7-adde-f5dfad7b577f-0",
        "target": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9",
        "targetHandle": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9-1",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "27c816ae-d0de-4380-943b-9ef2c9248c9d",
        "source": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9",
        "sourceHandle": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9-0",
        "target": "89d518ad-2769-4eee-81e5-5b7876cfc4f1",
        "targetHandle": "89d518ad-2769-4eee-81e5-5b7876cfc4f1-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "371a6e2f-c7f8-4c81-92be-1eab530cd346",
        "source": "7094b9d4-3173-450f-b491-3c6936c510ab",
        "sourceHandle": "7094b9d4-3173-450f-b491-3c6936c510ab-0",
        "target": "c56c2f68-0478-4db5-b038-24f83f8ae275",
        "targetHandle": "c56c2f68-0478-4db5-b038-24f83f8ae275-0",
        "type": "main",
        "zIndex": 69,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "5913e9ba-c2c7-4836-a3b4-7375ca75a7ad",
        "source": "ad24cc0b-36ac-415f-9347-c6da40edec4e",
        "sourceHandle": "ad24cc0b-36ac-415f-9347-c6da40edec4e-0",
        "target": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9",
        "targetHandle": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "63490a2f-b598-433a-864e-4a08ec2e7cfb",
        "source": "9fe50d97-8d04-43b7-adde-f5dfad7b577f",
        "sourceHandle": "9fe50d97-8d04-43b7-adde-f5dfad7b577f-0",
        "target": "246c1a4b-9d15-4e93-b296-9ca05a51170a",
        "targetHandle": "246c1a4b-9d15-4e93-b296-9ca05a51170a-1",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "6f75d981-4acc-4501-a370-ba466dd8001e",
        "source": "9fe50d97-8d04-43b7-adde-f5dfad7b577f",
        "sourceHandle": "9fe50d97-8d04-43b7-adde-f5dfad7b577f-0",
        "target": "ad24cc0b-36ac-415f-9347-c6da40edec4e",
        "targetHandle": "ad24cc0b-36ac-415f-9347-c6da40edec4e-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "73804025-435d-4e52-bd8b-caffdd1f6799",
        "source": "c104d1f4-02cc-4e8c-a1cc-21dec7afaa93",
        "sourceHandle": "c104d1f4-02cc-4e8c-a1cc-21dec7afaa93-0",
        "target": "246c1a4b-9d15-4e93-b296-9ca05a51170a",
        "targetHandle": "246c1a4b-9d15-4e93-b296-9ca05a51170a-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "b807296b-cb0e-4073-bc96-d56e2ff191ce",
        "source": "246c1a4b-9d15-4e93-b296-9ca05a51170a",
        "sourceHandle": "246c1a4b-9d15-4e93-b296-9ca05a51170a-0",
        "target": "7094b9d4-3173-450f-b491-3c6936c510ab",
        "targetHandle": "7094b9d4-3173-450f-b491-3c6936c510ab-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "cd968055-e15d-4897-b09c-20d95129f2d1",
        "source": "ad24cc0b-36ac-415f-9347-c6da40edec4e",
        "sourceHandle": "ad24cc0b-36ac-415f-9347-c6da40edec4e-0",
        "target": "7ae37f51-b9d9-41d8-aed7-b6f5a0cea0d6",
        "targetHandle": "7ae37f51-b9d9-41d8-aed7-b6f5a0cea0d6-0",
        "type": "main",
        "zIndex": 49,
      },
    ],
    "nodes": Array [
      Object {
        "data": Object {
          "id": "246c1a4b-9d15-4e93-b296-9ca05a51170a",
          "inputData": Object {
            "2": 69,
            "4": 28,
            "5": 81,
          },
          "schemaId": "chainner:image:overlay",
        },
        "height": 456,
        "id": "246c1a4b-9d15-4e93-b296-9ca05a51170a",
        "position": Object {
          "x": 453.03125,
          "y": 113,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "7094b9d4-3173-450f-b491-3c6936c510ab",
          "inputData": Object {
            "1": "0",
          },
          "schemaId": "chainner:image:flip",
        },
        "height": 260,
        "id": "7094b9d4-3173-450f-b491-3c6936c510ab",
        "position": Object {
          "x": 222.71233886887774,
          "y": 1112.075862240231,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "7ae37f51-b9d9-41d8-aed7-b6f5a0cea0d6",
          "inputData": Object {
            "1": "1",
            "2": 34,
          },
          "schemaId": "chainner:image:create_border",
        },
        "height": 342,
        "id": "7ae37f51-b9d9-41d8-aed7-b6f5a0cea0d6",
        "position": Object {
          "x": 921.6036887897096,
          "y": 365.42388294050994,
        },
        "selected": false,
        "type": "regularNode",
        "width": 283,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "89d518ad-2769-4eee-81e5-5b7876cfc4f1",
          "inputData": Object {
            "1": 243,
            "2": 3,
          },
          "schemaId": "chainner:image:shift",
        },
        "height": 342,
        "id": "89d518ad-2769-4eee-81e5-5b7876cfc4f1",
        "position": Object {
          "x": 1017.8220871882434,
          "y": 930.7055908254938,
        },
        "selected": false,
        "type": "regularNode",
        "width": 283,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9",
          "inputData": Object {},
          "schemaId": "chainner:image:difference",
        },
        "height": 218,
        "id": "94e84d6f-5179-42c9-8d63-2f3ddfd121d9",
        "position": Object {
          "x": 592.7247701547936,
          "y": 985.0646017506039,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "9fe50d97-8d04-43b7-adde-f5dfad7b577f",
          "inputData": Object {
            "4": "horizontal",
          },
          "schemaId": "chainner:image:stack",
        },
        "height": 380,
        "id": "9fe50d97-8d04-43b7-adde-f5dfad7b577f",
        "position": Object {
          "x": 108.03125,
          "y": 498,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "ad24cc0b-36ac-415f-9347-c6da40edec4e",
          "inputData": Object {
            "1": "1",
          },
          "schemaId": "chainner:image:change_colorspace",
        },
        "height": 260,
        "id": "ad24cc0b-36ac-415f-9347-c6da40edec4e",
        "position": Object {
          "x": 515.03125,
          "y": 615,
        },
        "selected": false,
        "type": "regularNode",
        "width": 244,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "c104d1f4-02cc-4e8c-a1cc-21dec7afaa93",
          "inputData": Object {
            "1": "Foo bar",
          },
          "schemaId": "chainner:image:caption",
        },
        "height": 260,
        "id": "c104d1f4-02cc-4e8c-a1cc-21dec7afaa93",
        "position": Object {
          "x": 95.03125,
          "y": 162,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "c56c2f68-0478-4db5-b038-24f83f8ae275",
          "inputData": Object {
            "1": 0,
          },
          "schemaId": "chainner:image:rotate",
        },
        "height": 260,
        "id": "c56c2f68-0478-4db5-b038-24f83f8ae275",
        "position": Object {
          "x": 672.5530413540804,
          "y": 1299.5404330540307,
        },
        "selected": true,
        "type": "regularNode",
        "width": 242,
        "zIndex": 70,
      },
    ],
    "viewport": Object {
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
  },
  "migration": 8,
  "timestamp": "",
  "version": "",
}
`;

exports[`Write save file ncnn.chn 1`] = `
Object {
  "checksum": "8a4a21b2193b4f86703d7b8239ada5d3",
  "content": Object {
    "edges": Array [
      Object {
        "animated": false,
        "data": Object {},
        "id": "35fe815b-c97b-4768-b976-d3b476e2fddb",
        "source": "bb5765f1-023f-46df-8fb2-33e5ad839427",
        "sourceHandle": "bb5765f1-023f-46df-8fb2-33e5ad839427-0",
        "target": "444d3246-76ad-4ba1-8b50-4ff2527bab87",
        "targetHandle": "444d3246-76ad-4ba1-8b50-4ff2527bab87-1",
        "type": "main",
        "zIndex": 69,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "9e1ee957-9738-4928-bd2f-b232a10afecf",
        "source": "bb5765f1-023f-46df-8fb2-33e5ad839427",
        "sourceHandle": "bb5765f1-023f-46df-8fb2-33e5ad839427-0",
        "target": "24b604f1-4c1b-40e1-a03b-3dfc6b2ba8df",
        "targetHandle": "24b604f1-4c1b-40e1-a03b-3dfc6b2ba8df-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "d33b8c77-c502-44c6-b297-1269534ef2a2",
        "source": "bb5765f1-023f-46df-8fb2-33e5ad839427",
        "sourceHandle": "bb5765f1-023f-46df-8fb2-33e5ad839427-0",
        "target": "5961ee68-6b8f-43ad-9120-52e06689ae77",
        "targetHandle": "5961ee68-6b8f-43ad-9120-52e06689ae77-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "e285a65e-5c8a-412b-b8db-89df232cdb9d",
        "source": "bb5765f1-023f-46df-8fb2-33e5ad839427",
        "sourceHandle": "bb5765f1-023f-46df-8fb2-33e5ad839427-0",
        "target": "444d3246-76ad-4ba1-8b50-4ff2527bab87",
        "targetHandle": "444d3246-76ad-4ba1-8b50-4ff2527bab87-0",
        "type": "main",
        "zIndex": 69,
      },
    ],
    "nodes": Array [
      Object {
        "data": Object {
          "id": "24b604f1-4c1b-40e1-a03b-3dfc6b2ba8df",
          "inputData": Object {
            "2": "",
          },
          "schemaId": "chainner:ncnn:save_model",
        },
        "height": 284,
        "id": "24b604f1-4c1b-40e1-a03b-3dfc6b2ba8df",
        "position": Object {
          "x": 544.03125,
          "y": 308,
        },
        "selected": false,
        "type": "regularNode",
        "width": 257,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "444d3246-76ad-4ba1-8b50-4ff2527bab87",
          "inputData": Object {
            "2": 23,
          },
          "schemaId": "chainner:ncnn:interpolate_models",
        },
        "height": 310,
        "id": "444d3246-76ad-4ba1-8b50-4ff2527bab87",
        "position": Object {
          "x": 795.03125,
          "y": 635,
        },
        "selected": true,
        "type": "regularNode",
        "width": 248,
        "zIndex": 70,
      },
      Object {
        "data": Object {
          "id": "5961ee68-6b8f-43ad-9120-52e06689ae77",
          "inputData": Object {},
          "schemaId": "chainner:ncnn:upscale_image",
        },
        "height": 218,
        "id": "5961ee68-6b8f-43ad-9120-52e06689ae77",
        "position": Object {
          "x": 390.03125,
          "y": 676,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "bb5765f1-023f-46df-8fb2-33e5ad839427",
          "inputData": Object {},
          "schemaId": "chainner:ncnn:load_model",
        },
        "height": 342,
        "id": "bb5765f1-023f-46df-8fb2-33e5ad839427",
        "position": Object {
          "x": 95.03125,
          "y": 321,
        },
        "selected": false,
        "type": "regularNode",
        "width": 257,
        "zIndex": 50,
      },
    ],
    "viewport": Object {
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
  },
  "migration": 8,
  "timestamp": "",
  "version": "",
}
`;

exports[`Write save file pytorch.chn 1`] = `
Object {
  "checksum": "8512ebd175e7e61b02c96e83685d800c",
  "content": Object {
    "edges": Array [
      Object {
        "animated": false,
        "data": Object {},
        "id": "008463f1-77cf-4f39-b888-6f7bdbf6f375",
        "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
        "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-0",
        "target": "3162a7ce-116b-4f7f-969f-e9a0d7973d61",
        "targetHandle": "3162a7ce-116b-4f7f-969f-e9a0d7973d61-0",
        "type": "main",
        "zIndex": 69,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "0c9a3fe3-b2a5-419b-8b04-10cdbeb0ce36",
        "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
        "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-1",
        "target": "1e54b9e8-03ba-4705-8ef9-d8cd0c8c2d43",
        "targetHandle": "1e54b9e8-03ba-4705-8ef9-d8cd0c8c2d43-2",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "189cbc3a-d9a3-4c3e-bc7b-f432820668d2",
        "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
        "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-0",
        "target": "8119c5d4-b2f9-4ffa-8621-a84dfd01d704",
        "targetHandle": "8119c5d4-b2f9-4ffa-8621-a84dfd01d704-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "2eb949f9-b277-4f73-8053-7ac1646649d4",
        "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
        "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-0",
        "target": "0ff35754-a542-4812-b3d5-2f1897c1972b",
        "targetHandle": "0ff35754-a542-4812-b3d5-2f1897c1972b-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "3b4a14ed-8ad0-4c78-8b74-8075555d5375",
        "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
        "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-1",
        "target": "8119c5d4-b2f9-4ffa-8621-a84dfd01d704",
        "targetHandle": "8119c5d4-b2f9-4ffa-8621-a84dfd01d704-2",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "72975f3e-aad2-46d0-8a17-20eeda1f14f8",
        "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
        "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-0",
        "target": "1e54b9e8-03ba-4705-8ef9-d8cd0c8c2d43",
        "targetHandle": "1e54b9e8-03ba-4705-8ef9-d8cd0c8c2d43-0",
        "type": "main",
        "zIndex": 49,
      },
      Object {
        "animated": false,
        "data": Object {},
        "id": "9ef7dac4-e560-4a87-b572-c22e7be3d516",
        "source": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
        "sourceHandle": "e3df2fdf-ef31-44e1-9e73-415ca448ac24-0",
        "target": "3162a7ce-116b-4f7f-969f-e9a0d7973d61",
        "targetHandle": "3162a7ce-116b-4f7f-969f-e9a0d7973d61-1",
        "type": "main",
        "zIndex": 69,
      },
    ],
    "nodes": Array [
      Object {
        "data": Object {
          "id": "0ff35754-a542-4812-b3d5-2f1897c1972b",
          "inputData": Object {},
          "schemaId": "chainner:pytorch:upscale_image",
        },
        "height": 218,
        "id": "0ff35754-a542-4812-b3d5-2f1897c1972b",
        "position": Object {
          "x": 463.0481218063261,
          "y": 54.77750343838076,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "1e54b9e8-03ba-4705-8ef9-d8cd0c8c2d43",
          "inputData": Object {
            "2": "",
          },
          "schemaId": "chainner:pytorch:save_model",
        },
        "height": 284,
        "id": "1e54b9e8-03ba-4705-8ef9-d8cd0c8c2d43",
        "position": Object {
          "x": 777.4674540587876,
          "y": 306.40246044613554,
        },
        "selected": false,
        "type": "regularNode",
        "width": 257,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "3162a7ce-116b-4f7f-969f-e9a0d7973d61",
          "inputData": Object {
            "2": 74,
          },
          "schemaId": "chainner:pytorch:interpolate_models",
        },
        "height": 310,
        "id": "3162a7ce-116b-4f7f-969f-e9a0d7973d61",
        "position": Object {
          "x": 137.4541188825251,
          "y": 757.7994492005994,
        },
        "selected": true,
        "type": "regularNode",
        "width": 248,
        "zIndex": 70,
      },
      Object {
        "data": Object {
          "id": "8119c5d4-b2f9-4ffa-8621-a84dfd01d704",
          "inputData": Object {
            "2": "",
          },
          "schemaId": "chainner:pytorch:convert_to_onnx",
        },
        "height": 284,
        "id": "8119c5d4-b2f9-4ffa-8621-a84dfd01d704",
        "position": Object {
          "x": 762.9729019259927,
          "y": 669.0123022306777,
        },
        "selected": false,
        "type": "regularNode",
        "width": 257,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
          "inputData": Object {
            "0": "C:\\\\DS3TexUp\\\\Cupscale 1.39.0f1\\\\CupscaleData\\\\models\\\\ESRGAN\\\\4x-UltraSharp.pth",
          },
          "schemaId": "chainner:pytorch:load_model",
        },
        "height": 324,
        "id": "e3df2fdf-ef31-44e1-9e73-415ca448ac24",
        "position": Object {
          "x": 54.03125,
          "y": 285,
        },
        "selected": false,
        "type": "regularNode",
        "width": 258,
        "zIndex": 50,
      },
    ],
    "viewport": Object {
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
  },
  "migration": 8,
  "timestamp": "",
  "version": "",
}
`;

exports[`Write save file utilities.chn 1`] = `
Object {
  "checksum": "0b701a58ee2c5edf56936dbd708f9d92",
  "content": Object {
    "edges": Array [],
    "nodes": Array [
      Object {
        "data": Object {
          "id": "18acc79d-abf9-46f1-9b4b-651836a9d3b1",
          "inputData": Object {
            "0": "-",
            "1": "Foo",
            "2": "Bar",
            "3": "",
            "4": "",
          },
          "schemaId": "chainner:utility:text_append",
        },
        "height": 548,
        "id": "18acc79d-abf9-46f1-9b4b-651836a9d3b1",
        "position": Object {
          "x": 592.03125,
          "y": 283,
        },
        "selected": false,
        "type": "regularNode",
        "width": 242,
        "zIndex": 50,
      },
      Object {
        "data": Object {
          "id": "56909a51-acd0-4e3d-b515-b3cb34e725c5",
          "inputData": Object {
            "0": 1,
            "1": "mul",
            "2": 5,
          },
          "schemaId": "chainner:utility:math",
        },
        "height": 384,
        "id": "56909a51-acd0-4e3d-b515-b3cb34e725c5",
        "position": Object {
          "x": 95.03125,
          "y": 377,
        },
        "selected": true,
        "type": "regularNode",
        "width": 257,
        "zIndex": 70,
      },
      Object {
        "data": Object {
          "id": "e21f5bf4-8171-43ce-a483-5152c5b7022e",
          "inputData": Object {
            "0": "Hi mom!",
          },
          "schemaId": "chainner:utility:note",
        },
        "height": 202,
        "id": "e21f5bf4-8171-43ce-a483-5152c5b7022e",
        "position": Object {
          "x": 282.03125,
          "y": 81,
        },
        "selected": false,
        "type": "regularNode",
        "width": 258,
        "zIndex": 50,
      },
    ],
    "viewport": Object {
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
  },
  "migration": 8,
  "timestamp": "",
  "version": "",
}
`;
